--- a/hello.html
+++ b/hello.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="eng">
-	<head>
-		<title>Hello</title>
-	</head>
+<head>
+     <title>Hello</title>
+</head>
+     <
+
 <body>
-       <h1 style="color:blue;" >welcome to my  Webpage <h1>
-       <h2>hello<h2>
-		Hello , World
+      <div id="page1">
+          <h1>This is Page 1<h1>
+      </div>
+      <div id="page2">
+           <h1>This is Page 2<h1>
+      </div>
+      <div id="page3">
+           <h1> This is Page 3 <h1>
+      </div>
 </body>
 </html>
